--- a/assets/pug/data/tables.pug
+++ b/assets/pug/data/tables.pug
@@ -742,79 +742,177 @@
                subTitle:"$251",
                priceDel:"$599",
                offer:"22%OFF",
-               totalPrice:"$215", 
+               totalPrice:"$502", 
                qty:2,
             },
             { 
                image:"2.jpg",
                title:"Spring Bed",
                ItemId:"#GS-6567",
-               subTitle:"$123",
+               subTitle:"$433",
                priceDel:"$789",
                offer:"45%OFF",
-               totalPrice:"$210",
-               qty:2,
+               totalPrice:"$1301",
+               qty:3,
             },
             {
                image:"3.jpg",
                title:"Long Dress",
                ItemId:"#GS-9211",
-               subTitle:"$451",
+               subTitle:"$659",
                priceDel:"$999",
                offer:"34%OFF",
-               totalPrice:"$561",
-               qty:2,
+               totalPrice:"$4615",
+               qty:7,
             },
             {
                image:"4.jpg",
                title:"Phillip Lightbulb",
                ItemId:"#GS-5214",
-               subTitle:"$321",
+               subTitle:"$251",
                priceDel:"$699",
                offer:"64%OFF",
-               totalPrice:"$411",
-               qty:2,
+               totalPrice:"$1006",
+               qty:4,
             },
             {
                image:"5.jpg",
                title:"Ladies Handbags",
                ItemId:"#GS-65411",
-               subTitle:"$345",
+               subTitle:"$254",
                priceDel:"$499",
                offer:"49%OFF",
-               totalPrice:"$395",
-               qty:2,
+               totalPrice:"$1526",
+               qty:6,
             },
             {
                image:"6.png",
                title:"Latest Cosmetics",
                ItemId:"#GS-34611",
-               subTitle:"$645",
-               priceDel:"$699",
+               subTitle:"$422",
+               priceDel:"$768",
                offer:"45%OFF",
-               totalPrice:"$234",
+               totalPrice:"$844",
                qty:2,
             },
             {
                image:"7.png",
                title:"Latest Nike shoes",
                ItemId:"#GS-64247",
-               subTitle:"$784",
+               subTitle:"$224",
                priceDel:"$899",
                offer:"75%OFF",
-               totalPrice:"$764",
-               qty:2,
+               totalPrice:"$674",
+               qty:3,
             },
             {
                image:"8.png",
                title:"Apple MacBook Air",
                ItemId:"#GS-3452",
-               subTitle:"$751",
+               subTitle:"$768",
                priceDel:"$1200",
                offer:"36%OFF", 
-               totalPrice:"$955",  
+               totalPrice:"$1536",  
                role:"Backend Engineer",
                qty:2,
-            },
+            }, 
          ]  
       };
+
+//- ====== Invoice Table ====== -// 
+-
+   var INVOICE_TABLE=
+      {
+         header:["Product", "User Name","Date","Status","Total","Action",],
+         action:["Copy","Send Email","Before Due","Past Due"],
+         body:[
+            {
+               image:"1.jpg",
+               title:"Samsung TV",
+               subTitle:"#GS0204",
+               userName: "Daniel C. Brown",
+               date:"25 Nov 2023",
+               status:"in progress",
+               total:"$2.588.00",
+               statusCode:"warning",
+               active:0,
+            },
+            {
+               image:"2.jpg",
+               title:"Spring Bed",
+               subTitle:"#PX0101",
+               userName: "Dorene C. McConnell",
+               date:"20 Nov 2023",
+               status:"Rejected",
+               total:"$4.800.00",
+               statusCode:"danger",
+               active:1,
+            },
+            {
+               image:"3.jpg",
+               title:"Long Dress",
+               subTitle:"#SP0212",
+               userName:"Naomi J. Cantu",
+               date:"12 Nov 2023",
+               status:"Completed",
+               total:"$4.678.00",
+               statusCode:"primary",
+               active:2,
+            },
+            {
+               image:"4.jpg",
+               title:"Phillip Lightbulb",
+               subTitle:"#HS0642",
+               userName:"Kristen J. Kang",
+               date:"10 Oct 2023",
+               status:"Rejected",
+               total:"$2.450.00",
+               statusCode:"danger",
+               active:0,
+            },
+            { 
+               image:"5.jpg",
+               title:"Ladies Handbags",
+               subTitle:"#LD2054",
+               userName:"Constance G. Mendez",
+               date:"10 Oct 2023",
+               status:"Completed",
+               total:"$2.450.00",
+               statusCode:"primary",
+               active:0,
+            },
+            {
+               image:"6.png",
+               title:"Latest Cosmetics",
+               subTitle:"#HS0876",
+               userName:"Debora J. Cameron",
+               date:"2 June 2023",
+               status:"Rejected",
+               total:"$2.450.00",
+               statusCode:"danger",
+               active:0,
+            },
+            {
+               image:"7.png",
+               title:"Latest Nike shoes",
+               subTitle:"#DS0192",
+               userName:"Rhonda G. Thomas",
+               date:"26 January 2023",
+               status:"in progress",
+               total:"$2.450.00",
+               statusCode:"warning",
+               active:0,
+            },
+            {
+               image:"8.png",
+               title:"Apple MacBook Air",
+               subTitle:"#VC0214",
+               userName:"Uudith R. Cordell",
+               date:"11 March 2023",
+               status:"Completed", 
+               total:"$2.450.00",
+               statusCode:"primary",
+               active:0,
+            },
+         ] 
+      }; 
