--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2531,6 +2531,42 @@ code[class*="language-"],
 .table.equal-space.table-action tr th:last-child {
   text-align: end;
 }
+.table.equal-space.table-action .plus-minus {
+  max-width: -moz-max-content;
+  max-width: max-content;
+}
+.table.equal-space.table-action .plus-minus svg {
+  height: 1.5rem;
+  width: 1.5rem;
+  padding: 0.25rem;
+}
+.table.equal-space.table-action tbody tr:last-child td .dropdown.dropdown-bottom .dropdown-menu {
+  bottom: 100% !important;
+  top: unset !important;
+  right: 0px !important;
+  left: unset !important;
+}
+.table.equal-space.table-action tbody .dropdown .dropdown-menu {
+  padding: 0.5rem;
+}
+.table.equal-space.table-action.invoice thead tr th:last-child {
+  text-align: start;
+}
+@media (max-width: 675px) {
+  .table.equal-space.table-action.invoice thead tr th:nth-child(2),
+                .table.equal-space.table-action.invoice thead tr th:nth-child(4) {
+    display: none;
+  }
+}
+.table.equal-space.table-action.invoice tbody tr:last-child td {
+  padding-bottom: 18px;
+}
+@media (max-width: 675px) {
+  .table.equal-space.table-action.invoice tbody tr td:nth-child(2),
+                .table.equal-space.table-action.invoice tbody tr td:nth-child(4) {
+    display: none;
+  }
+}
 .table.table-bordered thead tr th {
   padding-left: 40px;
   padding-right: 40px;
@@ -4855,9 +4891,6 @@ code[class*="language-"],
 .top-2 {
   top: 0.5rem;
 }
-.top-36 {
-  top: 9rem;
-}
 .top-\[-0\.9375rem\] {
   top: -0.9375rem;
 }
@@ -5953,6 +5986,9 @@ code[class*="language-"],
 .min-w-\[150px\] {
   min-width: 150px;
 }
+.min-w-\[155px\] {
+  min-width: 155px;
+}
 .min-w-\[160px\] {
   min-width: 160px;
 }
@@ -6000,6 +6036,9 @@ code[class*="language-"],
 }
 .min-w-\[5\.3125rem\] {
   min-width: 5.3125rem;
+}
+.min-w-\[5\.5rem\] {
+  min-width: 5.5rem;
 }
 .min-w-\[50px\] {
   min-width: 50px;
@@ -6061,9 +6100,6 @@ code[class*="language-"],
 }
 .max-w-\[100px\] {
   max-width: 100px;
-}
-.max-w-\[110px\] {
-  max-width: 110px;
 }
 .max-w-\[120px\] {
   max-width: 120px;
@@ -6406,6 +6442,9 @@ code[class*="language-"],
 .gap-card-space {
   gap: calc(0.9375rem + (1.0625 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
 }
+.\!gap-0 {
+  gap: 0px !important;
+}
 .gap-y-\[0\.25rem\] {
   row-gap: 0.25rem;
 }
@@ -6535,6 +6574,9 @@ code[class*="language-"],
 }
 .border-\[2px\] {
   border-width: 2px;
+}
+.\!border {
+  border-width: 1px !important;
 }
 .border-b {
   border-bottom-width: 1px;
@@ -6890,6 +6932,9 @@ code[class*="language-"],
 .p-card-space {
   padding: calc(0.9375rem + (1.0625 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
 }
+.\!p-2 {
+  padding: 0.5rem !important;
+}
 .\!px-0 {
   padding-left: 0px !important;
   padding-right: 0px !important;
@@ -6977,10 +7022,6 @@ code[class*="language-"],
 .px-\[5px\] {
   padding-left: 5px;
   padding-right: 5px;
-}
-.px-\[8px\] {
-  padding-left: 8px;
-  padding-right: 8px;
 }
 .px-\[calc\(7px_\+_\(14_-_7\)_\*_\(\(100vw_-_320px\)_\/_\(1920_-_320\)\)\)\] {
   padding-left: calc(7px + (14 - 7) * ((100vw - 320px) / (1920 - 320)));
@@ -7125,6 +7166,10 @@ code[class*="language-"],
 .py-card-gap {
   padding-top: calc(0.9375rem + (1.875 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
   padding-bottom: calc(0.9375rem + (1.875 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
+}
+.px-\[25px\] {
+  padding-left: 25px;
+  padding-right: 25px;
 }
 .\!pb-0 {
   padding-bottom: 0px !important;
@@ -9757,6 +9802,9 @@ code[class*="language-"],
 .hover\:border-primary:hover {
   border-color: rgba(var(--primary),1);
 }
+.hover\:\!border-primary:hover {
+  border-color: rgba(var(--primary),1) !important;
+}
 .hover\:bg-danger:hover {
   background-color: var(--danger);
 }
@@ -11112,6 +11160,9 @@ code[class*="language-"],
   .\32lg\:mt-\[18px\] {
     margin-top: 18px;
   }
+  .\32lg\:block {
+    display: block;
+  }
   .\32lg\:hidden {
     display: none;
   }
@@ -11509,6 +11560,13 @@ code[class*="language-"],
   .\32md\:\!min-w-\[450px\] {
     min-width: 450px !important;
   }
+  .\32md\:min-w-\[65px\] {
+    min-width: 65px;
+  }
+  .\32md\:min-w-max {
+    min-width: -moz-max-content;
+    min-width: max-content;
+  }
   .\32md\:max-w-\[60\%\] {
     max-width: 60%;
   }
@@ -11645,6 +11703,9 @@ code[class*="language-"],
   }
   .sm\:ml-unset {
     margin-left: unset;
+  }
+  .sm\:mt-3 {
+    margin-top: 0.75rem;
   }
   .sm\:mt-4 {
     margin-top: 1rem;
@@ -12104,6 +12165,9 @@ code[class*="language-"],
   .\33sm\:col-span-9 {
     grid-column: span 9 / span 9;
   }
+  .\33sm\:flex {
+    display: flex;
+  }
   .\33sm\:hidden {
     display: none;
   }
@@ -12118,6 +12182,9 @@ code[class*="language-"],
   }
   .\33sm\:max-w-full {
     max-width: 100%;
+  }
+  .\33sm\:flex-col {
+    flex-direction: column;
   }
   .\33sm\:justify-center {
     justify-content: center;
