design sidebar filter in shop page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4804,6 +4804,12 @@ code[class*="language-"],
 .left-1\/2 {
   left: 50%;
 }
+.left-3 {
+  left: 0.75rem;
+}
+.left-3\.5 {
+  left: 0.875rem;
+}
 .left-5 {
   left: 1.25rem;
 }
@@ -4839,6 +4845,9 @@ code[class*="language-"],
 }
 .right-2 {
   right: 0.5rem;
+}
+.right-2\.5 {
+  right: 0.625rem;
 }
 .right-5 {
   right: 1.25rem;
@@ -4885,11 +4894,26 @@ code[class*="language-"],
 .top-0 {
   top: 0px;
 }
+.top-1 {
+  top: 0.25rem;
+}
+.top-1\.5 {
+  top: 0.375rem;
+}
 .top-1\/2 {
   top: 50%;
 }
+.top-14 {
+  top: 3.5rem;
+}
 .top-2 {
   top: 0.5rem;
+}
+.top-3 {
+  top: 0.75rem;
+}
+.top-8 {
+  top: 2rem;
 }
 .top-\[-0\.9375rem\] {
   top: -0.9375rem;
@@ -5877,8 +5901,14 @@ code[class*="language-"],
 .w-\[calc\(100\%_-_0rem\)\] {
   width: calc(100% - 0rem);
 }
+.w-\[calc\(100\%_-_130px\)\] {
+  width: calc(100% - 130px);
+}
 .w-\[calc\(100\%_-_15\.8125rem\)\] {
   width: calc(100% - 15.8125rem);
+}
+.w-\[calc\(100\%_-_170px\)\] {
+  width: calc(100% - 170px);
 }
 .w-\[calc\(100\%_-_253px\)\] {
   width: calc(100% - 253px);
@@ -6106,6 +6136,9 @@ code[class*="language-"],
 }
 .max-w-\[180px\] {
   max-width: 180px;
+}
+.max-w-\[185px\] {
+  max-width: 185px;
 }
 .max-w-\[200px\] {
   max-width: 200px;
@@ -6343,6 +6376,9 @@ code[class*="language-"],
 .justify-between {
   justify-content: space-between;
 }
+.\!gap-0 {
+  gap: 0px !important;
+}
 .\!gap-1 {
   gap: 0.25rem !important;
 }
@@ -6403,6 +6439,9 @@ code[class*="language-"],
 .gap-\[30px\] {
   gap: 30px;
 }
+.gap-\[3px\] {
+  gap: 3px;
+}
 .gap-\[47px\] {
   gap: 47px;
 }
@@ -6430,6 +6469,9 @@ code[class*="language-"],
 .gap-\[calc\(20px_\+_\(30_-_20\)_\*_\(\(100vw_-_320px\)_\/_\(1920_-_320\)\)\)\] {
   gap: calc(20px + (30 - 20) * ((100vw - 320px) / (1920 - 320)));
 }
+.gap-\[calc\(7px_\+_\(15_-_7\)_\*_\(\(100vw_-_320px\)_\/_\(1920_-_320\)\)\)\] {
+  gap: calc(7px + (15 - 7) * ((100vw - 320px) / (1920 - 320)));
+}
 .gap-\[calc\(8px_\+_\(20_-_8\)_\*_\(\(100vw_-_320px\)_\/_\(1920_-_320\)\)\)\] {
   gap: calc(8px + (20 - 8) * ((100vw - 320px) / (1920 - 320)));
 }
@@ -6441,9 +6483,6 @@ code[class*="language-"],
 }
 .gap-card-space {
   gap: calc(0.9375rem + (1.0625 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
-}
-.\!gap-0 {
-  gap: 0px !important;
 }
 .gap-y-\[0\.25rem\] {
   row-gap: 0.25rem;
@@ -6510,8 +6549,14 @@ code[class*="language-"],
 .rounded-\[10px\] {
   border-radius: 10px;
 }
+.rounded-\[15px\] {
+  border-radius: 15px;
+}
 .rounded-\[2px\] {
   border-radius: 2px;
+}
+.rounded-\[3px\] {
+  border-radius: 3px;
 }
 .rounded-\[4px\] {
   border-radius: 4px;
@@ -6545,11 +6590,17 @@ code[class*="language-"],
 .rounded-br-none {
   border-bottom-right-radius: 0px;
 }
+.rounded-tl-\[0\.25rem\] {
+  border-top-left-radius: 0.25rem;
+}
 .rounded-tl-\[0\.625rem\] {
   border-top-left-radius: 0.625rem;
 }
 .rounded-tl-none {
   border-top-left-radius: 0px;
+}
+.rounded-tr-\[0\.25rem\] {
+  border-top-right-radius: 0.25rem;
 }
 .rounded-tr-\[0\.625rem\] {
   border-top-right-radius: 0.625rem;
@@ -6559,6 +6610,9 @@ code[class*="language-"],
 }
 .rounded-tr-none {
   border-top-right-radius: 0px;
+}
+.\!border {
+  border-width: 1px !important;
 }
 .\!border-0 {
   border-width: 0px !important;
@@ -6574,9 +6628,6 @@ code[class*="language-"],
 }
 .border-\[2px\] {
   border-width: 2px;
-}
-.\!border {
-  border-width: 1px !important;
 }
 .border-b {
   border-bottom-width: 1px;
@@ -6666,6 +6717,9 @@ code[class*="language-"],
 }
 .border-primary {
   border-color: rgba(var(--primary),1);
+}
+.border-primary-light {
+  border-color: var(--primary-light);
 }
 .border-secondary {
   border-color: rgba(var(--secondary),1);
@@ -6786,6 +6840,9 @@ code[class*="language-"],
 .bg-top {
   background-position: top;
 }
+.fill-content {
+  fill: var(--content);
+}
 .fill-danger {
   fill: var(--danger);
 }
@@ -6872,6 +6929,9 @@ code[class*="language-"],
 .\!p-1 {
   padding: 0.25rem !important;
 }
+.\!p-2 {
+  padding: 0.5rem !important;
+}
 .p-0 {
   padding: 0px;
 }
@@ -6931,9 +6991,6 @@ code[class*="language-"],
 }
 .p-card-space {
   padding: calc(0.9375rem + (1.0625 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
-}
-.\!p-2 {
-  padding: 0.5rem !important;
 }
 .\!px-0 {
   padding-left: 0px !important;
@@ -7006,6 +7063,10 @@ code[class*="language-"],
 .px-\[15px\] {
   padding-left: 15px;
   padding-right: 15px;
+}
+.px-\[25px\] {
+  padding-left: 25px;
+  padding-right: 25px;
 }
 .px-\[26px\] {
   padding-left: 26px;
@@ -7167,10 +7228,6 @@ code[class*="language-"],
   padding-top: calc(0.9375rem + (1.875 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
   padding-bottom: calc(0.9375rem + (1.875 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
 }
-.px-\[25px\] {
-  padding-left: 25px;
-  padding-right: 25px;
-}
 .\!pb-0 {
   padding-bottom: 0px !important;
 }
@@ -7260,6 +7317,12 @@ code[class*="language-"],
 }
 .pt-0 {
   padding-top: 0px;
+}
+.pt-0\.5 {
+  padding-top: 0.125rem;
+}
+.pt-1 {
+  padding-top: 0.25rem;
 }
 .pt-2 {
   padding-top: 0.5rem;
@@ -7362,6 +7425,9 @@ code[class*="language-"],
 }
 .text-\[13px\] {
   font-size: 13px;
+}
+.text-\[20px\] {
+  font-size: 20px;
 }
 .text-\[26px\] {
   font-size: 26px;
@@ -7468,6 +7534,9 @@ code[class*="language-"],
 }
 .leading-\[22px\] {
   line-height: 22px;
+}
+.leading-\[normal\] {
+  line-height: normal;
 }
 .leading-none {
   line-height: 1;
@@ -7653,8 +7722,15 @@ code[class*="language-"],
 .ring-success {
   --tw-ring-color: var(--success);
 }
+.ring-offset-2 {
+  --tw-ring-offset-width: 2px;
+}
 .blur {
   --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+.drop-shadow-lg {
+  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .drop-shadow-md {
@@ -7691,6 +7767,9 @@ code[class*="language-"],
 }
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 [dir=rtl] .pl-0 {
   padding-left: unset;
@@ -9802,9 +9881,6 @@ code[class*="language-"],
 .hover\:border-primary:hover {
   border-color: rgba(var(--primary),1);
 }
-.hover\:\!border-primary:hover {
-  border-color: rgba(var(--primary),1) !important;
-}
 .hover\:bg-danger:hover {
   background-color: var(--danger);
 }
@@ -9919,12 +9995,20 @@ code[class*="language-"],
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
+.focus\:ring-2:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
 .focus\:ring-blue-500:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
 }
 .focus\:ring-current:focus {
   --tw-ring-color: currentColor;
+}
+.focus\:ring-warning:focus {
+  --tw-ring-color: var(--warning);
 }
 .group:hover .group-hover\:visible {
   visibility: visible;
@@ -9934,6 +10018,11 @@ code[class*="language-"],
 }
 .group:hover .group-hover\:rotate-180 {
   --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.group:hover .group-hover\:scale-100 {
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .group:hover .group-hover\:scale-125 {
@@ -9947,8 +10036,14 @@ code[class*="language-"],
 .group:hover .group-hover\:stroke-white {
   stroke: #fff;
 }
+.group:hover .group-hover\:text-info {
+  color: var(--info);
+}
 .group:hover .group-hover\:text-primary {
   color: rgba(var(--primary),1);
+}
+.group:hover .group-hover\:text-secondary {
+  color: rgba(var(--secondary),1);
 }
 .group:hover .group-hover\:text-white {
   --tw-text-opacity: 1;
@@ -9956,6 +10051,16 @@ code[class*="language-"],
 }
 .group:hover .group-hover\:opacity-100 {
   opacity: 1;
+}
+.group:hover .group-hover\:transition {
+  transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.group:hover .group-hover\:ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .peer:checked ~ .peer-checked\:visible {
   visibility: visible;
@@ -10126,6 +10231,9 @@ code[class*="language-"],
   }
   .\36xl\:h-\[37px\] {
     height: 37px;
+  }
+  .\36xl\:w-12 {
+    width: 3rem;
   }
   .\36xl\:w-4 {
     width: 1rem;
@@ -10317,6 +10425,9 @@ code[class*="language-"],
   }
   .\34xl\:w-\[calc\(100\%_-_230px\)\] {
     width: calc(100% - 230px);
+  }
+  .\34xl\:max-w-\[250px\] {
+    max-width: 250px;
   }
   .\34xl\:max-w-\[40\%\] {
     max-width: 40%;
@@ -10602,6 +10713,9 @@ code[class*="language-"],
   }
   .\32xl\:w-full {
     width: 100%;
+  }
+  .\32xl\:max-w-\[180px\] {
+    max-width: 180px;
   }
   .\32xl\:flex-col {
     flex-direction: column;
@@ -11049,6 +11163,9 @@ code[class*="language-"],
   }
   .lg\:max-w-\[80\%\] {
     max-width: 80%;
+  }
+  .lg\:max-w-full {
+    max-width: 100%;
   }
   .lg\:flex-col {
     flex-direction: column;
@@ -11503,6 +11620,9 @@ code[class*="language-"],
   .\32md\:col-span-5 {
     grid-column: span 5 / span 5;
   }
+  .\32md\:col-span-6 {
+    grid-column: span 6 / span 6;
+  }
   .\32md\:col-span-7 {
     grid-column: span 7 / span 7;
   }
@@ -11710,6 +11830,9 @@ code[class*="language-"],
   .sm\:mt-4 {
     margin-top: 1rem;
   }
+  .sm\:mt-5 {
+    margin-top: 1.25rem;
+  }
   .sm\:block {
     display: block;
   }
@@ -11799,6 +11922,9 @@ code[class*="language-"],
   }
   .sm\:w-\[80\%\] {
     width: 80%;
+  }
+  .sm\:w-\[calc\(100\%_-_150px\)\] {
+    width: calc(100% - 150px);
   }
   .sm\:w-full {
     width: 100%;
@@ -11909,6 +12035,9 @@ code[class*="language-"],
     line-height: 0.9375rem;
     letter-spacing: 0.03125rem;
   }
+  .sm\:text-\[16px\] {
+    font-size: 16px;
+  }
   .sm\:text-\[2\.5rem\] {
     font-size: 2.5rem;
   }
@@ -11979,6 +12108,9 @@ code[class*="language-"],
   }
   .\32sm\:top-\[10\%\] {
     top: 10%;
+  }
+  .\32sm\:col-span-12 {
+    grid-column: span 12 / span 12;
   }
   .\32sm\:-mx-\[34px\] {
     margin-left: -34px;
@@ -12165,9 +12297,6 @@ code[class*="language-"],
   .\33sm\:col-span-9 {
     grid-column: span 9 / span 9;
   }
-  .\33sm\:flex {
-    display: flex;
-  }
   .\33sm\:hidden {
     display: none;
   }
@@ -12179,6 +12308,9 @@ code[class*="language-"],
   }
   .\33sm\:w-\[58px\] {
     width: 58px;
+  }
+  .\33sm\:max-w-\[180px\] {
+    max-width: 180px;
   }
   .\33sm\:max-w-full {
     max-width: 100%;
