--- a/assets/pug/data/all-data.pug
+++ b/assets/pug/data/all-data.pug
@@ -11,6 +11,7 @@ include ./list-type.pug
 include ./app-menu.pug
 include ./message.pug
 include ./notification.pug
+include ./new-product.pug
 include ./page-menu.pug
 include ./product.pug
 include ./profile-setting.pug
