--- a/assets/pug/mixin/mixin.pug
+++ b/assets/pug/mixin/mixin.pug
@@ -10,6 +10,7 @@ include ./element-breadcrumb-3.pug
 include ./element-card-header.pug
 include ./element-icon-box.pug
 include ./element-image-card.pug
+include ./element-new-product.pug
 include ./element-invoice-icon.pug
 include ./element-legend-image.pug
 include ./element-news-update.pug
@@ -17,6 +18,7 @@ include ./element-notification.pug
 include ./element-email-data.pug
 include ./element-plus-minus.pug
 include ./element-product-list.pug
+include ./element-product-box.pug
 include ./element-recent-activity.pug
 include ./element-social-media.pug
 include ./element-task-list-checkbox.pug
