--- a/assets/pug/pages/unique/cart.pug
+++ b/assets/pug/pages/unique/cart.pug
@@ -42,7 +42,7 @@ html(lang='en')
                         div.col-span-3(class="xl:col-span-4 lg:col-span-12")
                             div.card.sticky.top-0 
                                 div.card-header
-                                    h3(class="mb-2 font-bold text-title") Cart information 
+                                    h3(class="mb-2 font-bold text-title") Cart Information 
                                     div.divider.w-full  
                                 div.card-body.flex.flex-col.gap-2 
                                     div.flex.flex-col.gap-1  
