--- a/assets/postcss/utils/_variables.css
+++ b/assets/postcss/utils/_variables.css
@@ -9,7 +9,7 @@
   --info: #b52af6;
   --info-light: #b52af64d;
   --warning: #feb858;
-  --warning-light:#feb8584d;
+  --warning-light: #feb8584d;
   --danger: #f1523d;
   --danger-light: #f1523d4d;
   --light: #d8ecff;
@@ -48,10 +48,10 @@
   --facebook: #3f5a9e;
   --instagram1: #fdf497;
   --instagram2: #fd5949;
-  --instagram3: #285AEB;
+  --instagram3: #285aeb;
 }
 
-html[class='dark'] {
+html[class="dark"] {
   --White: #1f2f3e;
   --black: #fff;
 }
@@ -85,7 +85,6 @@ html[class='dark'] {
 
   --secondary: 255, 141, 175;
   --secondary-light: rgba(var(--secondary), 0.3);
-  
 }
 
 /* Crypto Skin */
