--- a/assets/pug/mixin/element-product-box.pug
+++ b/assets/pug/mixin/element-product-box.pug
@@ -3,60 +3,74 @@
         {
             image: "ecommerce/1.jpg",
             productName: "Wooden Sofa Set",
-            price: "$120",
+            price: "$339",
             deletePrice: "$399",
-            delivery:"Free delivery",
-            rate: "3",
+            delivery:"Free delivery by Govo",
+            discount:"(15% Off)",
+            rating:"43 Ratings",
+            rate: "3.5",
             label: "Sale"
         },
         {
             image: "ecommerce/2.jpg",
             productName: "Boat Headphone",
-            price: "$500",
+            price: "$520",
             deletePrice: "$650",
-            delivery:"Free delivery",
-            rate: "2"
+            delivery:"Free delivery by Govo",
+            discount:"(20% Off)",
+            rating:"540 Ratings",
+            rate: "3.9"
         },
         {
             image: "ecommerce/3.jpg",
             productName: "Running Shoes",
             price: "$75",
             deletePrice: "$150",
-            delivery:"Free delivery",
-            rate: "4",
+            delivery:"Free delivery by Govo",
+            discount:"(50% Off)",
+            rating:"70 Ratings",
+            rate: "4.6",
             label: "50% off"
         },
         {
             image: "ecommerce/4.jpg",
-            productName: "Beautiful vase",
-            price: "$50",
+            productName: "Gorgeous Flower Vase",
+            price: "$63",
             deletePrice: "$70",
-            delivery:"Free delivery",
-            rate: "5"
+            delivery:"Free delivery by Govo",
+            discount:"(10% Off)",
+            rating:"180 Ratings",
+            rate: "4.8"
         },
         {
             image: "ecommerce/5.jpg",
             productName: "Cleaning, sanitizing, and disinfecting supplies",
-            price: "$98",
+            price: "$82",
             deletePrice: "$110",
-            delivery:"Free delivery",
-            rate: "3"
+            delivery:"Free delivery by Govo",
+            discount:"(25% Off)",
+            rating:"162 Ratings",
+            rate: "3.9"
         },
         {
             image: "ecommerce/6.jpg",
             productName: "Apple AirPods",
-            price: "$185",
+            price: "$162",
             deletePrice: "$200",
-            delivery:"Free delivery",
-            rate: "5"
+            delivery:"Free delivery by Govo",
+            discount:"(19% Off)",
+            rating:"125 Ratings",
+            rate: "4.5"
         },
         {
             image: "ecommerce/7.jpg",
-            productName: "3 Seater Sofa, Chenille Molfino",
-            price: "$499",
+            productName: "Three Seater Leather Sofa",
+            price: "$712",
             deletePrice: "$750",
-            delivery:"Free delivery",
-            rate: "3",
+            delivery:"Free delivery by Govo",
+            discount:"(5% Off)",
+            rating:"250 Ratings",
+            rate: "3.8",
             label: "Sale"
         },
         {
@@ -64,41 +78,51 @@
             productName: "Gucci Sling Bag",
             price: "$105",
             deletePrice: "$138",
-            delivery:"Free delivery",
-            rate: "2"
+            delivery:"Free delivery by Govo",
+            discount:"(15% Off)",
+            rating:"150 Ratings",
+            rate: "2.5"
         },
         {
             image: "ecommerce/9.jpg",
             productName: "Nike - Latest Sports Shoes",
-            price: "$75",
-            deletePrice: "$150",
-            delivery:"Free delivery",
-            rate: "4",
-            label: "50% off"
+            price: "$176",
+            deletePrice: "$200",
+            delivery:"Free delivery by Govo",
+            discount:"(12% Off)",
+            rating:"150 Ratings",
+            rate: "4.9",
+            label: "12% off"
         },
         {
             image: "ecommerce/10.jpg",
             productName: "Three Seater Sofa Cum Bed",
             price: "$299",
             deletePrice: "$399",
-            delivery:"Free delivery",
-            rate: "5"
+            delivery:"Free delivery by Govo",
+            discount:"(15% Off)",
+            rating:"150 Ratings",
+            rate: "4.7"
         },
         {
             image: "ecommerce/11.jpg",
-            productName: "Coffie cup",
+            productName: "Coffee cup",
             price: "$98",
             deletePrice: "$110",
-            delivery:"Free delivery",
-            rate: "3"
+            delivery:"Free delivery by Govo",
+            discount:"(15% Off)",
+            rating:"150 Ratings",
+            rate: "3.6"
         },
         {
             image: "ecommerce/12.jpg",
             productName: "Leatherette Seater",
             price: "$485",
             deletePrice: "$590",
-            delivery:"Free delivery",
-            rate: "5"
+            delivery:"Free delivery by Govo",
+            discount:"(15% Off)",
+            rating:"150 Ratings",
+            rate: "4.5"
         },
     ];
 
@@ -108,42 +132,45 @@ mixin product(data,modal,modalId)
             .relative
                 if (data.label)
                     span.badge.bg-secondary.badge-xs.absolute.font-bold(class="top-3 right-3.5 rounded-[3px] text-2xs")= data.label
-                div(class="absolute top-[-1px] left-[-10px] flex flex-col invisible gap-2 p-3 transition-all duration-300 ease-linear opacity-0 cursor-pointer group-hover:visible group-hover:opacity-100 group-hover:left-[-1px]")
+                div(class="absolute top-[-1px] left-[-10px] flex flex-col invisible gap-1 p-3 transition-all duration-300 ease-linear opacity-0 cursor-pointer group-hover:visible group-hover:opacity-100 group-hover:left-[-1px]")
 
                     a(href="javascript:void(0)" class="btn heart !p-0")
                         svg(width='0' height='0') 
                             linearGradient#lgrad(x1="0%" y1="50%" x2="100%" y2="50%")
-                                stop(offset='0%' style='stop-color:rgb(255,35,0);stop-opacity:0.60')
-                                stop(offset='100%' style='stop-color:rgb(255,0,0);stop-opacity:1.00')
+                                stop(offset='0%' style='stop-color:rgb(255, 97, 80);stop-opacity:1.00')
+                                stop(offset='100%' style='stop-color:rgb(255, 97, 80);stop-opacity:1.00')
                         i.fa-solid.fa-heart(class="flex items-center justify-center p-2 bg-white rounded-full")
-                    a(href="javascript:void(0)" class="btn !text-secondary !p-0")
+                    a(href="javascript:void(0)" class="btn shopping-cart !p-0")
                         svg(width='0' height='0') 
-                            linearGradient#lgrad(x1="0%" y1="50%" x2="100%" y2="50%")
-                                stop(offset='0%' style='stop-color:rgb(238,130,238);stop-opacity:1.00')
-                                stop(offset='0%' style='stop-color:rgb(63,81,181);stop-opacity:1.00')
-                                stop(offset='72%' style='stop-color:rgb(72,72,157);stop-opacity:1.00')
+                            linearGradient#grid(cx="50%" cy="50%" r="50%")
+                                stop(offset='0%' style='stop-color:rgb(181 42 246);stop-opacity:1.00')
+                                stop(offset='100%' style='stop-color:rgb(181 42 246);stop-opacity:1.00')
+                            ellipse(cx='50%' cy='50%' rx='600' ry='200')
                         i.fa-solid.fa-cart-shopping(class="flex items-center justify-center p-2 bg-white rounded-full")
                     if (modal === "modal")
                         label(for= modalId)
-                            a(href="javascript:void(0)" class="btn !text-secondary !p-0")
+                            a(href="javascript:void(0)" class="btn modal-eye !p-0")
                                 svg(width='0' height='0') 
-                                    linearGradient#lgrad(x1="0%" y1="50%" x2="100%" y2="50%")
-                                        stop(offset='0%' style='stop-color:rgb(255,35,0);stop-opacity:0.60')
-                                        stop(offset='100%' style='stop-color:rgb(255,0,0);stop-opacity:1.00')
+                                    radialGradient#rgrad(cx="50%" cy="50%" r="50%" )
+                                        stop(offset='0%' style='stop-color:rgb(51, 191, 191);stop-opacity:1.00')
+                                        stop(offset='100%' style='stop-color:rgb(51, 191, 191);stop-opacity:1.00')
                                 i.fa-solid.fa-eye(class="flex items-center justify-center p-2 bg-white rounded-full")
                 a(href="product.html")
                     img(src=`../../assets/images/${data.image}` class="rounded-[4px] w-full" alt="product image")
             div.pt-2 
-                a(href="product.html" class="flex flex-col gap-1")     
-                    h4.font-bold.text-sm.truncate.text-title= data.productName
-                    div.flex.items-center.justify-between
-                        h6.text-3xs.flex(class="pt-0.5 gap-1")
-                            span.text-xs.font-bold.text-primary= data.price
-                            del.text-content3.text-xs= data.deletePrice 
+                a(href="product.html" class="flex flex-col gap-[0.3rem]")     
+                    h4.font-bold.text-sm.text-title.line-clamp-1= data.productName
+                    div.flex.items-center(class="pt-0.5 gap-1")
+                            span.text-lg.font-bold.text-primary= data.price
+                            del.text-content3.text-sm= data.deletePrice 
+                            small.text-danger.font-sm=data.discount 
+                    div.flex.items-center.gap-1
                         div.flex.items-center.gap-1.bg-warning.py-1.px-2.rounded-5.max-w-max
-                            i(data-feather="star" class="w-3 h-3 stroke-white fill-white")
-                            span(class="font-semibold leading-none text-white text-2xs")= data.rate
-                    p.text-title.text-2xs=data.delivery
+                            i(data-feather="star" class="w-[0.8rem] h-[0.8rem] stroke-white fill-white")
+                            span(class="font-semibold leading-none text-white text-2xs mt-[3px]")= data.rate
+                        span.text-content3.text-xs=data.rating                    
+                    p.text-title.text-2xs.mt-2=data.delivery
+                        
 
 
 
