--- a/assets/pug/pages/unique/shop.pug
+++ b/assets/pug/pages/unique/shop.pug
@@ -38,10 +38,28 @@ html(lang='en')
                 // Page Body Start
                 div.page-body 
                     div.grid.grid-cols-12.gap-card-gap
-                        div.col-span-3(class="lg:col-span-12")
-                            div.card.sticky.top-0
-                                //- div.card-header
-                                //-     h2(class="mb-3 font-bold text-title") Filters
+                        div.col-span-12 
+                            div.rounded-5.overflow-hidden.relative
+                                img(src="../../assets/images/ecommerce/light-berner.jpg" alt="light-banner.jpg" class="w-full drop-shadow-lg min-h-[120px] max-h-[300px]")
+                                div.absolute(class="text-center top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-[40%] lg:max-w-[75%] xl:max-w-[50%]")
+                                    div.search-box.relative
+                                        input(class="focus:ring-2 focus:ring-warning bg-wi border-border-light border ring-offset-2 rounded-5 w-full py-[11px] pl-[25px] pr-[55px] md:py-[5px] text-xs font-semibold text-title" placeholder="Search Brands..." type="search")       
+                                        +SVG_ICON("Search","xl:hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute")
+                                        i(data-feather="x" class="search-close hidden cursor-pointer xl:block w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute")
+                        
+                        div.col-span-12.flex.items-center.justify-between.gap-3.bg-white.p-3 
+                            div.product-filter 
+                                +SVG_ICON("Filter", "w-6 h-6 stroke-title xl:block hidden")
+                            div.flex.items-center.gap-3
+                                div.product-setting 
+                                    i(data-feather="grid" class="w-6 h-6 stroke-title")
+                                div.product-setting 
+                                    i(data-feather="list" class="w-6 h-6 stroke-title")
+                        
+                        div.col-span-3(class="xl:hidden")
+                            div.card.sticky.top-0(class="product-filter")
+                                div.card-header 
+                                    h2(class="font-bold text-title") Filters
                                 div.card-body.flex.flex-col.gap-1
                                     div.flex.flex-col.flex-wrap.gap-2
                                         div.accordionWrapper
@@ -217,23 +235,19 @@ html(lang='en')
                                         div(class="block w-full p-3 mb-2 border-2 bg-white-light border-primary-light")
                                             +new-product-card(NEW_PRODUCT)
 
-                        div.col-span-9(class="lg:col-span-12")
-                            div.rounded-5.overflow-hidden.relative
-                                img(src="../../assets/images/ecommerce/light-berner.jpg" alt="light-banner.jpg" class="w-full drop-shadow-lg")
-                                div.absolute(class="text-center top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-[40%] lg:max-w-[75%] xl:max-w-[50%]")
-                                    div.search-box.relative
-                                        input(class="focus:ring-2 focus:ring-warning bg-wi border-border-light border ring-offset-2 rounded-5 w-full py-[11px] pl-[25px] pr-[55px] md:py-[5px] text-xs font-semibold text-title" placeholder="Search Brands..." type="search")       
-                                        +SVG_ICON("Search","xl:hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute")
-                                        i(data-feather="x" class="search-close hidden cursor-pointer xl:block w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute")
-                            .grid.grid-cols-12.gap-6.mt-6(class="sm:mt-5") 
+                        div.col-span-9(class="xl:col-span-12")
+                            .grid.grid-cols-12.gap-6(class="sm:mt-5") 
                                 each data in PRODUCT_BOX
-                                    div.col-span-4(class='3xl:col-span-4 2md:col-span-6 2sm:col-span-12')
+                                    div.col-span-3(class='4xl:col-span-4 md:col-span-6 sm:col-span-12')
                                         +product(data,"modal")
 
                     // Page Body End  
                     +footer("sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap")
-            include ../../components/customizer
+            include ../../components/customizer                        
+
     include ../../layout/footer-files
 
 
+    
 
+                  
